# friction

./: CLAUDE.md  CMakeLists.txt  DEBUGGING-WINDOWS-PREVIEW.md  Justfile  earlye-fork.md
issues/: issue-019f28b5-0391-7322-ac0f-290e8ced0979-ruby-glasses-not-showing-up.md  issue-019f29c7-324e-7503-856e-cdb8fa24e410-svg-import-strips-hyphens-from-names.md  issue-019f29c7-3258-7d03-b02c-f016a38ddff0-stale-flipbook-tracks-never-pruned.md  issue-019f29f2-ca57-7811-8f78-e1039db994b1-tighten-orphan-detection.md  issue-019f2dd6-9180-7691-9788-a3ed7a39471c-set-source-file-resets-element-track-to-zero.md  issue-019f2ded-3c61-7983-a202-2cbfd30ced28-gizmo-float-precision-distortion-at-extreme-zoom.md  issue-019f2df0-3d48-7fc1-aebc-57a4e9a8842e-relinked-svg-shows-empty-link.md  issue-019f2e60-f4f7-7d90-b275-3ecf05783ce1-scale-fix-oversized-bounding-box.md  issue-019f2ff5-ec1f-7121-a121-6273b7a1731c-friction-silent-failures-need-visibility.md  issue-019f2ff5-ec27-7c83-9c95-3dc99fd1649a-flipbook-track-editor-page-combobox.md  issue-019f3860-558f-7af3-b118-a8f43b739106-upstream-pr-audio-waveform.md  issue-019f3860-5597-74f0-9a24-c79849d5ee75-upstream-pr-windows-playback-cache.md  issue-019f3860-559e-7f73-bf38-dfcf74542e53-upstream-pr-svg-stroke-width-import.md  issue-019f3860-55a9-7b11-885f-d995c629933b-upstream-pr-svg-display-none-import.md  issue-019f3860-55b3-7383-a0ba-51de6cea5f1d-upstream-pr-inconsistent-missing-override.md  issue-019f3860-55bb-7943-ac81-f24a9429b3d9-upstream-pr-unused-but-set-variable.md  issue-019f3869-037a-7843-94b7-da4b8f32ee02-pull-upstream-fixes.md  issue-019f38d7-6df9-7aa0-8f22-ffdd43a7997b-sibling-overlay-invzoom-precision.md  issue-019f3d32-cdd9-7052-b37a-f48a666431f6-movablepoint-circle-precision-loss.md  issue-019f3d49-ae80-7853-9d2d-ea5108bfc59c-upstream-smartpath-hardening.md  issue-019f3d49-aec7-7e31-aba0-37417806d215-upstream-gles3-support.md  (+23 more)
tests/: CMakeLists.txt  tst_gizmos.cpp  tst_movablepoint_precision.cpp
(+61 files in other folders)
